--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@kyleshockey/object-assign-deep": "^0.4.2",
     "@kyleshockey/xml": "^1.0.2",
     "base64-js": "^1.2.0",
+    "brace": "^0.11.1",
     "classnames": "^2.2.5",
     "core-js": "^2.5.1",
     "css.escape": "1.5.1",
@@ -65,6 +66,7 @@
     "memoizee": "^0.4.12",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
+    "react-ace": "^6.3.2",
     "react-addons-perf": "^15.4.0",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^15.6.2",
@@ -93,6 +95,7 @@
     "babel-plugin-transform-es2015-constants": "^6.1.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-wildcard": "^5.0.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2015-ie": "^6.6.2",
     "babel-preset-react": "^6.23.0",
